--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <option value="women's clothing">women's clothing</option>
     </select>
     <label for="Cart Item"></label>
-    <button  id="num"onclick="window.open(href = '/selected.html')">CART ITEM 0</button>
+    <button  id="num"onclick="window.open(href = ' https://prabhatzws.github.io/WEBSTORE/selected.html')">CART ITEM 0</button>
   </nav>
   <div id="data">
   </div>
